refactor: rename package to birthius and fix CLI configuration
- Rename package from birthdayer to birthius
- Update bin field to use correct CLI command name
- Fix main entry point to use birthius.js
- Bump version to 1.0.1

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "birthdayer",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "birthius",
+  "version": "1.0.1",
+  "description": "Create beautiful birthday celebration pages",
+  "main": "birthius.js",
   "type": "module",
+  "bin": {
+    "birthius": "./birthius.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
